add component for orders

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
       "<rootDir>/node_modules/",
       "<rootDir>/dist/"
     ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@ngrx|service-layer)"
+    ],
     "globals": {
       "ts-jest": {
         "tsconfig": "<rootDir>/tsconfig.spec.json",
