--- a/package.json
+++ b/package.json
@@ -51,14 +51,15 @@
       "<rootDir>/node_modules/",
       "<rootDir>/dist/"
     ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!@ngrx|service-layer)"
-    ],
     "globals": {
       "ts-jest": {
         "tsconfig": "<rootDir>/tsconfig.spec.json",
         "stringifyContentPathRegex": "\\.html$"
       }
-    }
+    },
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>"
+    ]
   }
 }
